[gd_scene load_steps=2 format=3 uid="uid://q0qsamraal0k"]

[ext_resource type="Script" path="res://ui.gd" id="1_5mnxc"]

[node name="UI" type="Control"]
custom_minimum_size = Vector2(16, 2.08165e-12)
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 25.0
offset_right = 59.0
offset_bottom = 25.0
scale = Vector2(3, 3)
script = ExtResource("1_5mnxc")

[node name="FirstResource" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 0
offset_right = 52.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "First: 0"

[node name="SecondResource" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 0
offset_left = 72.0
offset_right = 146.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Second: 0"

[node name="ThirdResource" type="Label" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 0
offset_left = 166.0
offset_right = 225.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Third: 0"

[node name="Scene" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 0
offset_left = 210.667
offset_top = -0.333333
offset_right = 340.667
offset_bottom = 25.6667
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Scene: Main"
horizontal_alignment = 2
